--- a/app/assets/v2/css/gitcoin.css
+++ b/app/assets/v2/css/gitcoin.css
@@ -91,6 +91,10 @@ h4, .h4 {
   padding-top: 40px;
 }
 
+img {
+    max-width: 100%;
+}
+
 .no-gutter {
   margin-right: 0;
   margin-left: 0;
