--- a/app/assets/v2/css/help.css
+++ b/app/assets/v2/css/help.css
@@ -23,8 +23,17 @@ h3 {
   font-size: 1em;
 }
 
-#feature_videos .video {
-  text-align: center;
+.video-row {
+    display: flex;
+}
+
+.video-row .video {
+    flex-basis: 29%;
+    margin: 0 2%;
+}
+
+.video-row .video iframe {
+    max-width: 100%;
 }
 
 .answer {
@@ -59,17 +68,16 @@ h3 {
   }
 }
 
+@media (max-width: 1180px) {
+    .video-row {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
 @media (max-width: 991px) {
   .heading {
     margin-top: 1em;
-  }
-
-  #feature_videos .video {
-    margin-bottom: 2em;
-    width: 100%;
-  }
-
-  #feature_videos iframe {
-    width: 100%;
   }
 }
